<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"

    android:columnCount="4"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_columnSpan="4"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:background="#000000"
        android:gravity="right"
        android:textColor="#fff"

        android:textDirection="anyRtl"
        android:textSize="40dp"
        tools:layout_marginLeft="0dp"
        tools:layout_marginStart="0dp" />

    <RadioGroup

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="15dp"

        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbEuro"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="convEuro"

            android:text="€" />

        <RadioButton
            android:id="@+id/rbdollar"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="convDollar"
            android:text="$" />

        <RadioButton
            android:id="@+id/rbLivre"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="convLivres"
            android:text="£" />

        <RadioButton
            android:id="@+id/rbBitcoin"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="convBitcoin"
            android:text="ß" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbDeg"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toDeg"
            android:text="deg." />

        <RadioButton
            android:id="@+id/rbRad"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toRad"
            android:text="rad." />

        <RadioButton
            android:id="@+id/rbGrd"
            style="@style/RadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toGrade"
            android:text="@string/grd" />

    </RadioGroup>

    <Button
        android:id="@+id/btEffacer"
        style="@style/margin_button"
        android:layout_width="160sp"
        android:layout_columnSpan="3"
        android:onClick="clear"
        android:text="@string/effacer"
        tools:layout_marginStart="25dp" />

    <Button
        android:id="@+id/bTdiviser"
        style="@style/margin_button"
        android:onClick="getValue"
        android:text="@string/div"

        />

    <Button
        android:id="@+id/btSept"
        style="@style/margin_button"
        android:onClick="getValue"
        android:text="@string/_7"
        tools:layout_marginStart="25dp" />

    <Button
        android:id="@+id/btHuit"
        style="@style/margin_button"

        android:onClick="getValue"
        android:text="@string/_8" />

    <Button
        android:id="@+id/btNeuf"
        style="@style/margin_button"

        android:onClick="getValue"
        android:text="@string/_9" />

    <Button
        android:id="@+id/btBy"

        style="@style/margin_button"
        android:onClick="getValue"

        android:text="@string/by" />
    />

    <Button
        android:id="@+id/btQuatre"
        style="@style/margin_button"
        android:onClick="getValue"

        android:text="@string/_4"
        tools:layout_marginStart="25dp" />

    <Button
        android:id="@+id/btCinq"
        style="@style/margin_button"
        android:onClick="getValue"
        android:text="@string/_5" />

    <Button
        android:id="@+id/btSix"
        style="@style/margin_button"

        android:onClick="getValue"
        android:text="@string/_6" />

    <Button
        android:id="@+id/btMinus"
        style="@style/margin_button"

        android:onClick="getValue"

        android:text="@string/minus" />
    />

    <Button
        android:id="@+id/btUn"
        style="@style/margin_button"
        android:onClick="getValue"

        android:text="@string/_1"
        tools:layout_marginStart="25dp" />

    <Button
        android:id="@+id/btDeux"
        style="@style/margin_button"

        android:onClick="getValue"
        android:text="@string/_2" />

    <Button
        android:id="@+id/btTrois"
        style="@style/margin_button"

        android:onClick="getValue"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btAdd"
        style="@style/margin_button"

        android:onClick="getValue"

        android:text="@string/plus" />
    />

    <Button
        android:id="@+id/btZero"
        style="@style/margin_button"

        android:onClick="getValue"
        android:text="@string/_0"
        tools:layout_marginStart="25dp" />

    <Button
        android:id="@+id/btDot"
        style="@style/margin_button"

        android:onClick="getValue"
        android:text="@string/dot" />

    <Button
        style="@style/margin_button"
        android:layout_width="160sp"
        android:layout_columnSpan="2"
        android:onClick="result"
        android:text="@string/result" />


</GridLayout>